force-app/main/default/objects/QuickBooks_Auth__c/QuickBooks_Auth__c.object-meta.xml
<CustomObject>
    <label>QuickBooks Auth</label>
    <nameField>
        <displayFormat>QB-AUTH-{00000}</displayFormat>
        <label>Auth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBooks Auth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>