force-app/main/default/objects/QuickBooks_Auth__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Access Token</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>