force-app/main/default/objects/QuickBooks_Auth__c/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <label>Token Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>